--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       // When the single page app is loaded further down in this file,
       // the correct url will be waiting in the browser's history for
       // the single page app to route accordingly.
-   /*   (function(l) {
+      (function(l) {
         if (l.search) {
           var q = {};
           l.search.slice(1).split('&').forEach(function(v) {
@@ -34,7 +34,7 @@
             );
           }
         }
-      }(window.location))*/
+      }(window.location))
     </script>
 
   </head>
