--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,6 @@
   </head>
   <body id="top">
     <div id="root"></div>
-    
+    <script src="/kando/build/bundle.js"></script>
   </body>
 </html>
